--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ google-cloud-speech = "^2.28.1"
 google-api-python-client = "^2.154.0"
 tk = "^0.1.0"
 pillow = "^11.0.0"
+openpyxl = "^3.1.5"
 
 
 [tool.poetry.group.dev.dependencies]
